add: header and side nav

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,8 @@ $adminka_na_kolenke-theme: mat.define-light-theme((
 @include mat.all-component-themes($adminka_na_kolenke-theme);
 
 /* You can add global styles to this file, and also import other style files */
+@import "./src/scss/variables";
+@import "./src/scss/base";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
