--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,14 @@
-<main-header></main-header>
+<ng-container *ngIf="isLogined; else login">
+  <main-header></main-header>
 
-<div class="content">
-  <side-nav></side-nav>
-</div>
+  <div class="content">
+    <side-nav></side-nav>
+  </div>
 
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</ng-container>
+
+<ng-template #login>
+  <auth (login)="loggedIn()"></auth>
+</ng-template>
+
