--- a/src/app/common/modules/layouts/main-header/main-header.component.html
+++ b/src/app/common/modules/layouts/main-header/main-header.component.html
@@ -7,7 +7,7 @@
 
     <div class="header__button-group">
       <button class="header__button" mat-icon-button>
-        <mat-icon svgIcon="logout" class="header__button-icon"></mat-icon>
+        <mat-icon (click)="logOut()" svgIcon="logout" class="header__button-icon"></mat-icon>
       </button>
     </div>
   </div>
