--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -19,6 +19,8 @@
   --color-venetian-red: #BF0E08;
   --color-mustard: #F7D154;
 
+  --color-white-semi-transparent: rgba(255, 255, 255, 0.5);
+
   // shadows
   --shadow-block: 0px 1px 3px rgba(63,63,68,0.15), 0px 0px 1px rgba(63,63,68,0.05);
   --shadow-input: 0px 0px 1px var(--color-platinum);
