--- a/src/scss/material/modules/_button-theme.scss
+++ b/src/scss/material/modules/_button-theme.scss
@@ -36,7 +36,7 @@
     }
 
     &.mat-button,
-    //&.mat-icon-button,
+    &.mat-icon-button,
     &.mat-stroked-button,
     &.mat-flat-button {
       height: var(--button-height);
@@ -86,23 +86,23 @@
       }
     }
 
-    //&.mat-icon-button {
-    //  --button-height: 4rem;
-    //  border-radius: 50%;
-    //  padding: 0;
-    //  width: var(--button-height);
-    //  height: var(--button-height);
-    //
-    //  .mat-button-wrapper {
-    //    display: flex;
-    //    justify-content: center;
-    //    align-items: center;
-    //  }
-    //
-    //  .mat-icon.small {
-    //    --size: 1.8rem;
-    //  }
-    //}
+    &.mat-icon-button {
+      --button-height: 4rem;
+      border-radius: 50%;
+      padding: 0;
+      width: var(--button-height);
+      height: var(--button-height);
+
+      .mat-button-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .mat-icon.small {
+        --size: 1.8rem;
+      }
+    }
 
     &.mat-stroked-button:not([disabled]) {
       border-color: var(--color-electric-blue);
