--- a/src/app/modules/posts/posts.component.html
+++ b/src/app/modules/posts/posts.component.html
@@ -1,1 +1,48 @@
-<p>posts works!</p>
+<div class="posts">
+  <load-spinner [isLoading]="isLoading">posts loading</load-spinner>
+
+  <table  *ngIf="!isLoading" mat-table [dataSource]="dataSource" class="table mat-elevation-z1">
+
+    <!-- ID -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef class="table__column table__column_id"> Id </th>
+      <td mat-cell *matCellDef="let element" class="table__column table__column_id"> {{ element.id }} </td>
+    </ng-container>
+
+    <!-- Title -->
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef class="table__column table__column_title"> Title </th>
+      <td mat-cell *matCellDef="let element" class="table__column table__column_title"> {{ element.title }} </td>
+    </ng-container>
+
+    <!-- Text -->
+    <ng-container matColumnDef="text">
+      <th mat-header-cell *matHeaderCellDef> Text </th>
+      <td mat-cell *matCellDef="let element">
+        <span *ngIf="element.showAll">{{ element.body }}</span>
+        <span *ngIf="!element.showAll">{{ element.body?.substring(1, 50) }}...</span>
+        <button mat-button (click)="element.showAll = !element.showAll" class="table__toggle-button">{{ element.showAll ? 'Show less' : 'Show more' }}</button>
+      </td>
+    </ng-container>
+
+    <!-- Action -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <div class="table__button-group">
+          <button mat-icon-button class="table__button table__button_arrow">
+            <mat-icon [svgIcon]="'arrow-right'" class="nav__icon"></mat-icon>
+          </button>
+          <button mat-icon-button class="table__button table__button_delete">
+            <mat-icon class="nav__icon" (click)="deletePost(element.id)">delete_forever</mat-icon>
+          </button>
+        </div>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator #paginator [pageSizeOptions]="pageSizes" showFirstLastButtons hidePageSize></mat-paginator>
+</div>
