--- a/src/app/modules/posts/posts.component.html
+++ b/src/app/modules/posts/posts.component.html
@@ -1,6 +1,13 @@
 <div class="posts">
   <load-spinner [isLoading]="isLoading">posts loading</load-spinner>
 
+  <div class="posts__actions">
+    <button (click)="createPost()" class="posts__button" mat-flat-button color="primary">
+      <mat-icon>add</mat-icon>
+      Add Post
+    </button>
+  </div>
+
   <table  *ngIf="!isLoading" mat-table [dataSource]="dataSource" class="table mat-elevation-z1">
 
     <!-- ID -->
@@ -19,9 +26,16 @@
     <ng-container matColumnDef="text">
       <th mat-header-cell *matHeaderCellDef> Text </th>
       <td mat-cell *matCellDef="let element">
-        <span *ngIf="element.showAll">{{ element.body }}</span>
-        <span *ngIf="!element.showAll">{{ element.body?.substring(1, 50) }}...</span>
-        <button mat-button (click)="element.showAll = !element.showAll" class="table__toggle-button">{{ element.showAll ? 'Show less' : 'Show more' }}</button>
+        <span *ngIf="element.showAll || element.body.length <= maxLengthPostBody">{{ element.body }}</span>
+        <span *ngIf="!element.showAll && element.body.length > maxLengthPostBody">{{ element.body?.substring(0, maxLengthPostBody) }}...</span>
+        <button
+          *ngIf="element.body.length > maxLengthPostBody"
+          (click)="element.showAll = !element.showAll"
+          mat-button
+          class="table__toggle-button"
+        >
+          {{ element.showAll ? 'Show less' : 'Show more' }}
+        </button>
       </td>
     </ng-container>
 
@@ -31,7 +45,7 @@
       <td mat-cell *matCellDef="let element">
         <div class="table__button-group">
           <button mat-icon-button class="table__button table__button_arrow">
-            <mat-icon [svgIcon]="'arrow-right'" class="nav__icon"></mat-icon>
+            <mat-icon (click)="openPost(element.id)" [svgIcon]="'arrow-right'" class="nav__icon"></mat-icon>
           </button>
           <button mat-icon-button class="table__button table__button_delete">
             <mat-icon class="nav__icon" (click)="deletePost(element.id)">delete_forever</mat-icon>
