--- a/src/app/common/modules/modals/entity-dialog/entity-dialog.component.html
+++ b/src/app/common/modules/modals/entity-dialog/entity-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="dialog">
-  <h3 class="dialog__title">{{ data.title }} <small>(id: {{ post.id }})</small></h3>
+  <h3 class="dialog__title">{{ data.title }}</h3>
 
   <form (submit)="submit()">
     <app-mat-form-field
@@ -7,10 +7,10 @@
       [required]="true"
       [placeholder]="'Enter Post Title'"
       [control]="formGroup.controls['title']"
-    >
-    </app-mat-form-field>
+    ></app-mat-form-field>
 
     <app-mat-form-textarea
+      *ngIf="data.entityType === EntityModalType.post"
       [inputType]="InputType.text"
       [required]="true"
       [placeholder]="'Enter Post Body'"
