--- a/src/scss/material/modules/_button-theme.scss
+++ b/src/scss/material/modules/_button-theme.scss
@@ -50,6 +50,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        gap: 1.2rem;
 
         strong {
           margin: 0 0.5em;
