fix: add shadow to paginator

--- a/src/app/modules/albums/albums.component.html
+++ b/src/app/modules/albums/albums.component.html
@@ -41,5 +41,5 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator #paginator [pageSizeOptions]="pageSizes" showFirstLastButtons hidePageSize></mat-paginator>
+  <mat-paginator #paginator [pageSizeOptions]="pageSizes" showFirstLastButtons hidePageSize class="items__paginator"></mat-paginator>
 </div>
