add: page user, with todos and albums tabs

--- a/src/app/common/modules/layouts/side-nav/user-data/user-data.component.html
+++ b/src/app/common/modules/layouts/side-nav/user-data/user-data.component.html
@@ -3,6 +3,6 @@
     <img [src]="userPhotoUrl" alt="Photo">
   </div>
 
-  <div class="user__name">{{ currentUser?.username || 'Unknown' }}</div>
+  <div class="user__name">{{ currentUser?.name || 'Unknown' }}</div>
   <div class="user__company">{{ currentUser?.company?.name || 'Unknown' }}</div>
 </div>
