--- a/src/app/modules/users/users.component.scss
+++ b/src/app/modules/users/users.component.scss
@@ -1,8 +1,5 @@
-.users {
-  padding: 2.4rem;
-
+.items {
   &__paginator {
-    box-shadow: var(--shadow-block);
     border-radius: 0.4rem;
   }
 }
