--- a/src/app/modules/albums/albums.component.html
+++ b/src/app/modules/albums/albums.component.html
@@ -1,7 +1,7 @@
 <div class="items">
   <load-spinner [isLoading]="isLoading"></load-spinner>
 
-  <div class="items__actions">
+  <div *ngIf="mode === ModeType.edit" class="items__actions">
     <button (click)="createItem()" class="items__button" mat-flat-button color="primary">
       <mat-icon>add</mat-icon>
       Add Album
@@ -27,12 +27,20 @@
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
         <div class="table__button-group">
-          <button mat-icon-button class="table__button table__button_arrow">
-            <mat-icon (click)="openAlbum(element.id)" [svgIcon]="'arrow-right'" class="nav__icon"></mat-icon>
-          </button>
-          <button mat-icon-button class="table__button table__button_delete">
-            <mat-icon (click)="deleteItem(element.id)" class="nav__icon">delete_forever</mat-icon>
-          </button>
+          <ng-container *ngIf="mode === ModeType.edit">
+            <button (click)="openAlbum(element.id)" mat-icon-button class="table__button table__button_arrow">
+              <mat-icon  [svgIcon]="'arrow-right'" class="nav__icon"></mat-icon>
+            </button>
+            <button (click)="deleteItem(element.id)" mat-icon-button class="table__button table__button_delete">
+              <mat-icon class="nav__icon">delete_forever</mat-icon>
+            </button>
+          </ng-container>
+
+          <ng-container *ngIf="mode === ModeType.view">
+            <button (click)="showAlbum(element.id)" mat-icon-button class="table__button table__button_arrow">
+              <mat-icon [svgIcon]="'arrow-right'" class="nav__icon"></mat-icon>
+            </button>
+          </ng-container>
         </div>
       </td>
     </ng-container>
