--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -16,6 +16,10 @@
     margin-bottom: 2.4rem;
     display: flex;
     justify-content: flex-end;
+
+    &_left-pos {
+      justify-content: flex-start;
+    }
   }
 
   &__button.mat-flat-button.mat-primary {
