--- a/src/app/modules/posts/posts.component.html
+++ b/src/app/modules/posts/posts.component.html
@@ -1,7 +1,7 @@
 <div class="items">
   <load-spinner [isLoading]="isLoading"></load-spinner>
 
-  <div class="items__actions">
+  <div *ngIf="mode === ModeType.edit" class="items__actions">
     <button (click)="createPost()" class="items__button" mat-flat-button color="primary">
       <mat-icon>add</mat-icon>
       Add Post
@@ -44,12 +44,20 @@
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
         <div class="table__button-group">
-          <button mat-icon-button class="table__button table__button_arrow">
-            <mat-icon (click)="openPost(element.id)" [svgIcon]="'arrow-right'" class="nav__icon"></mat-icon>
-          </button>
-          <button mat-icon-button class="table__button table__button_delete">
-            <mat-icon class="nav__icon" (click)="deletePost(element.id)">delete_forever</mat-icon>
-          </button>
+          <ng-container *ngIf="mode === ModeType.edit">
+            <button mat-icon-button class="table__button table__button_arrow">
+              <mat-icon (click)="openPost(element.id)" [svgIcon]="'arrow-right'" class="nav__icon"></mat-icon>
+            </button>
+            <button mat-icon-button class="table__button table__button_delete">
+              <mat-icon class="nav__icon" (click)="deletePost(element.id)">delete_forever</mat-icon>
+            </button>
+          </ng-container>
+
+          <ng-container *ngIf="mode === ModeType.view">
+            <button (click)="showPost(element.id)" mat-icon-button class="table__button table__button_arrow">
+              <mat-icon [svgIcon]="'arrow-right'" class="nav__icon"></mat-icon>
+            </button>
+          </ng-container>
         </div>
       </td>
     </ng-container>
