update: albums, single-album, posts components

--- a/src/app/modules/albums/albums.component.html
+++ b/src/app/modules/albums/albums.component.html
@@ -8,7 +8,7 @@
     </button>
   </div>
 
-  <table  *ngIf="!isLoading" mat-table [dataSource]="dataSource" class="table mat-elevation-z1">
+  <table mat-table [dataSource]="dataSource" class="table mat-elevation-z1">
 
     <!-- ID -->
     <ng-container matColumnDef="id">
