--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -1,7 +1,14 @@
 <div class="auth">
+  <load-spinner [isLoading]="isLoading"></load-spinner>
+
   <div class="auth__column auth__column_form">
     <h1 class="auth__title">Sign in to Adminka</h1>
     <p class="auth__subtitle">Sign in on Adminka Na Kolenke platform</p>
+
+    <div *ngIf="wrongMail" class="auth__message">
+      <mat-icon [color]="'warn'">error_outline</mat-icon>
+      This user does not exist in the system.
+    </div>
 
     <form [formGroup]="formGroup" (submit)="signIn()">
       <div class="auth__row">
@@ -25,7 +32,6 @@
       </div>
 
       <button mat-flat-button type="submit" color="primary" class="shadow full-width auth__button">Sign In</button>
-
     </form>
   </div>
 
