--- a/src/app/common/modules/layouts/side-nav/user-data/user-data.component.html
+++ b/src/app/common/modules/layouts/side-nav/user-data/user-data.component.html
@@ -1,6 +1,6 @@
 <div class="user">
   <div class="user__img-wrapper">
-    <img [src]="userPhotoUrl" alt="Photo">
+    <mat-icon class="user__img">person_outline</mat-icon>
   </div>
 
   <div class="user__name">{{ currentUser?.name || 'Unknown' }}</div>
