fix: rebuilt routers and breadcrumbs

--- a/src/app/common/modules/layouts/main-header/main-header.component.html
+++ b/src/app/common/modules/layouts/main-header/main-header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header__content">
-    <a href="#" class="header__logo">
+    <a href="/" class="header__logo">
       <mat-icon class="header__logo-img" svgIcon="logo"></mat-icon>
       <span class="header__logo-text">Devias Kit</span>
     </a>
