--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <side-nav></side-nav>
 
     <div class="content__main">
+      <breadcrumbs></breadcrumbs>
       <router-outlet></router-outlet>
     </div>
   </div>
