--- a/src/app/modules/posts/posts.component.html
+++ b/src/app/modules/posts/posts.component.html
@@ -45,9 +45,9 @@
       <td mat-cell *matCellDef="let element">
         <div class="table__button-group">
           <ng-container *ngIf="mode === ModeType.edit">
-            <button mat-icon-button class="table__button table__button_arrow">
-              <mat-icon (click)="openPost(element.id)" [svgIcon]="'arrow-right'" class="nav__icon"></mat-icon>
-            </button>
+            <a [routerLink]="[element.id]" mat-icon-button>
+              <mat-icon [svgIcon]="'arrow-right'" class="nav__icon"></mat-icon>
+            </a>
             <button mat-icon-button class="table__button table__button_delete">
               <mat-icon class="nav__icon" (click)="deletePost(element.id)">delete_forever</mat-icon>
             </button>
