--- a/src/app/modules/single-user/single-user.component.html
+++ b/src/app/modules/single-user/single-user.component.html
@@ -1,49 +1,66 @@
 <div class="">
   <load-spinner [isLoading]="isLoading"></load-spinner>
 
-  <mat-tab-group [(selectedIndex)]="selectedTabIndex" class="user__tabs">
-    <mat-tab>
-      <ng-template mat-tab-label>
-        <span class="">Posts</span>
-      </ng-template>
-      <posts
-        *ngIf="usersPostState === UsersPostState.posts"
-        [mode]="ModeType.view"
-        [userId]="userId"
-        (showSelectedPost)="showSinglePost($event)"
-      ></posts>
-      <single-post
-        *ngIf="usersPostState === UsersPostState.singlePost"
-        [mode]="ModeType.view"
-        [postId]="postId"
-        (showPosts)="showPosts()"
-      ></single-post>
-    </mat-tab>
-    <mat-tab>
-      <ng-template mat-tab-label>
-        <span class="">Albums</span>
-      </ng-template>
-      <albums
-        *ngIf="usersAlbumState === UsersAlbumState.albums"
-        [mode]="ModeType.view"
-        [userId]="userId"
-        (showSelectedAlbum)="showSingleAlbum($event)"
-      ></albums>
-      <single-album
-        *ngIf="usersAlbumState === UsersAlbumState.singleAlbum"
-        [mode]="ModeType.view"
-        [albumId]="albumId"
-        (showAlbums)="showAlbums()"
-      ></single-album>
-    </mat-tab>
-    <mat-tab>
-      <ng-template mat-tab-label>
-        <span class="">Todos</span>
-      </ng-template>
-      <todos
-        [mode]="ModeType.view"
-        [userId]="userId"
-      ></todos>
-    </mat-tab>
-  </mat-tab-group>
+  <ul class="nav__list">
+    <li *ngFor="let item of navItems" class="nav__item">
+      <a
+        mat-stroked-button
+        class="nav__link rounded"
+        [routerLink]="item.link"
+        [routerLinkActive]="'active'"
+      >
+        <mat-icon [svgIcon]="item.icon" class="nav__icon"></mat-icon>
+        <span>{{ item.title }}</span>
+      </a>
+    </li>
+  </ul>
+
+  <router-outlet></router-outlet>
+
+
+<!--  <mat-tab-group [(selectedIndex)]="selectedTabIndex" class="user__tabs">-->
+<!--    <mat-tab>-->
+<!--      <ng-template mat-tab-label>-->
+<!--        <span class="">Posts</span>-->
+<!--      </ng-template>-->
+<!--      <posts-->
+<!--        *ngIf="usersPostState === UsersPostState.posts"-->
+<!--        [mode]="ModeType.view"-->
+<!--        [userId]="userId"-->
+<!--        (showSelectedPost)="showSinglePost($event)"-->
+<!--      ></posts>-->
+<!--      <single-post-->
+<!--        *ngIf="usersPostState === UsersPostState.singlePost"-->
+<!--        [mode]="ModeType.view"-->
+<!--        [postId]="postId"-->
+<!--        (showPosts)="showPosts()"-->
+<!--      ></single-post>-->
+<!--    </mat-tab>-->
+<!--    <mat-tab>-->
+<!--      <ng-template mat-tab-label>-->
+<!--        <span class="">Albums</span>-->
+<!--      </ng-template>-->
+<!--      <albums-->
+<!--        *ngIf="usersAlbumState === UsersAlbumState.albums"-->
+<!--        [mode]="ModeType.view"-->
+<!--        [userId]="userId"-->
+<!--        (showSelectedAlbum)="showSingleAlbum($event)"-->
+<!--      ></albums>-->
+<!--      <single-album-->
+<!--        *ngIf="usersAlbumState === UsersAlbumState.singleAlbum"-->
+<!--        [mode]="ModeType.view"-->
+<!--        [albumId]="albumId"-->
+<!--        (showAlbums)="showAlbums()"-->
+<!--      ></single-album>-->
+<!--    </mat-tab>-->
+<!--    <mat-tab>-->
+<!--      <ng-template mat-tab-label>-->
+<!--        <span class="">Todos</span>-->
+<!--      </ng-template>-->
+<!--      <todos-->
+<!--        [mode]="ModeType.view"-->
+<!--        [userId]="userId"-->
+<!--      ></todos>-->
+<!--    </mat-tab>-->
+<!--  </mat-tab-group>-->
 </div>
