--- a/src/app/common/modules/layouts/side-nav/user-data/user-data.component.scss
+++ b/src/app/common/modules/layouts/side-nav/user-data/user-data.component.scss
@@ -16,6 +16,7 @@
     font-size: 10rem;
     box-shadow: var(--shadow-block);
     border-radius: 50%;
+    color: var(--color-slate-gray);
     background-color: var(--color-ghost-white);
   }
 
