--- a/src/app/modules/single-user/single-user.component.scss
+++ b/src/app/modules/single-user/single-user.component.scss
@@ -51,6 +51,7 @@
     letter-spacing: normal;
     text-transform: capitalize;
     padding: 0 2rem;
+    line-height: 3.8rem;
 
     &.active {
       background-color: var(--color-denim);
