add: edit mode depends on the role

--- a/src/app/common/modules/layouts/side-nav/nav-list/nav-list.component.html
+++ b/src/app/common/modules/layouts/side-nav/nav-list/nav-list.component.html
@@ -1,11 +1,10 @@
 <nav class="nav">
   <ul class="nav__list">
-    <li *ngFor="let item of navItems" class="nav__list-item">
+    <li *ngFor="let item of navItemsShow" class="nav__list-item">
       <a
         class="nav__link"
         [routerLink]="item.link"
         [routerLinkActive]="'active'"
-
       >
         <mat-icon [svgIcon]="item.icon" class="nav__icon"></mat-icon>
         <span>{{ item.title }}</span>
