--- a/src/app/common/modules/layouts/side-nav/user-data/user-data.component.html
+++ b/src/app/common/modules/layouts/side-nav/user-data/user-data.component.html
@@ -3,6 +3,6 @@
     <mat-icon class="user__img">person_outline</mat-icon>
   </div>
 
-  <div class="user__name">{{ currentUser?.name || 'Unknown' }}</div>
-  <div class="user__company">{{ currentUser?.company?.name || 'Unknown' }}</div>
+  <div class="user__name">{{ userName }}</div>
+  <div class="user__company">{{ userCompany }}</div>
 </div>
