--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -20,6 +20,7 @@
   --color-mustard: #F7D154;
 
   --color-white-semi-transparent: rgba(255, 255, 255, 0.5);
+  --color-carmine-pink-semi-transparent: rgba(236, 76, 71, 0.5);
 
   // shadows
   --shadow-block: 0px 1px 3px rgba(63,63,68,0.15), 0px 0px 1px rgba(63,63,68,0.05);
