--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <main-header (logOutUser)="logOut()"></main-header>
 
   <div class="content">
-    <side-nav></side-nav>
+    <side-nav [currentRole]="currentRole"></side-nav>
 
     <div class="content__main">
       <breadcrumbs></breadcrumbs>
