--- a/src/app/common/shared/components/load-spinner/load-spinner.component.html
+++ b/src/app/common/shared/components/load-spinner/load-spinner.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="isLoading" class="spinner-wrapper">
+<div class="spinner-wrapper">
   <mat-spinner [diameter]="radius"></mat-spinner>
 </div>
