fixes: according to code review

--- a/src/app/common/modules/layouts/side-nav/side-nav.component.html
+++ b/src/app/common/modules/layouts/side-nav/side-nav.component.html
@@ -1,4 +1,4 @@
 <div class="sidebar">
-  <user-data [currentRole]="currentRole"></user-data>
+  <user-data></user-data>
   <nav-list [currentRole]="currentRole"></nav-list>
 </div>
