--- a/src/app/common/modules/layouts/side-nav/user-data/user-data.component.scss
+++ b/src/app/common/modules/layouts/side-nav/user-data/user-data.component.scss
@@ -4,9 +4,7 @@
   border-bottom: 1px solid var(--color-platinum);
 
   &__img-wrapper {
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 1.6rem;
+    margin: 0 auto 1.6rem;
     text-align: center;
   }
 
