--- a/src/app/common/shared/components/gallery/gallery.component.html
+++ b/src/app/common/shared/components/gallery/gallery.component.html
@@ -1,20 +1,24 @@
-<lightgallery [settings]="settings" [onInit]="onInit" class="gallery">
-  <a
-    *ngFor="let item of items"
-    [href]="item.src"
-    [attr.data-title]="item.title"
-    [attr.data-id]="item.id"
-    [attr.data-lg-size]="item.size"
+<div class="container gallery" gallerize>
+  <div
+    *ngFor="let item of items; let i = index"
+    [attr.data-title]="item.data.title"
+    [attr.data-id]="item.data.id"
     class="gallery__item"
+    (click)="open(i)"
   >
+    <img
+      [src]="item.data.thumb"
+      [attr.imageSrc]="item.data.src"
+      [attr.thumbSrc]="item.data.thumb"
+      (click)="$event.stopPropagation();"
+    >
     <button
       *ngIf="mode === ModeType.edit"
+      (click)="deletePhoto($event, item.data.id);"
       mat-icon-button
       class="gallery__button"
-      (click)="deletePhoto($event, item.id);"
     >
       <mat-icon>delete_forever</mat-icon>
     </button>
-    <img alt="img1" [src]="item.thumb" />
-  </a>
-</lightgallery>
+  </div>
+</div>
