add: switch lang component

--- a/src/app/common/modules/layouts/main-header/main-header.component.html
+++ b/src/app/common/modules/layouts/main-header/main-header.component.html
@@ -6,6 +6,8 @@
     </a>
 
     <div class="header__button-group">
+      <select-lang></select-lang>
+
       <button class="header__button" mat-icon-button>
         <mat-icon (click)="logOut()" svgIcon="logout" class="header__button-icon"></mat-icon>
       </button>
